--- a/abinash-portfolio/.github/workflows/deploy.yml
+++ b/abinash-portfolio/.github/workflows/deploy.yml
@@ -1,25 +1,24 @@
-# Workflow to build and deploy your React app to GitHub Pages
 name: Deploy React App to GitHub Pages
 
 on:
-  # Runs when you push code to the 'main' branch
   push:
     branches: ["main"]
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# Grant permissions for the workflow to write to GitHub Pages
 permissions:
   contents: read
   pages: write
   id-token: write
 
+concurrency:
+  group: "pages"
+  cancel-in-progress: false
+
 jobs:
-  # The build process
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
+      - name: Checkout
         uses: actions/checkout@v4
       - name: Set up Node.js
         uses: actions/setup-node@v4
@@ -28,20 +27,22 @@ jobs:
           cache: 'npm'
       - name: Install dependencies
         run: npm install
-      - name: Build the app
+      - name: Build
         run: npm run build
-      - name: Upload the built app as an artifact
+      - name: Setup Pages
+        uses: actions/configure-pages@v5
+      - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: './build' # The folder that 'npm run build' creates
+          # This path is now CORRECT
+          path: './dist'
       
-  # The deployment process
   deploy:
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
-    needs: build # This job runs only after the 'build' job is successful
+    needs: build
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
